<?xml version="1.0"?>
<package format="2">
  <name>qr_tracking</name>
  <version>0.0.0</version>
  <description>QR tracking for drones</description>

  <maintainer email="amartinezacosta@miners.utep.edu.todo">Alejandro Martinez Acosta</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/qr_tracking</url> -->
  <author email="amartinezacosta@miners.utep.edu">Alejandro Martinez Acosta</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
